# sample_esdk

./: CMakeLists.txt  COPYING
include/: HelloApi.h
pkgconfig/: hello-apis.pc.cmakein
srcs/: HelloApi.cpp  main.cpp
